--- a/trunk/ToDo
+++ b/trunk/ToDo
@@ -21,4 +21,4 @@
 20. BSD compatibility
 21. OSOL compatibility
 22. Multiple backup
-23. Pulish to googlecode
+23. Pulish to googlecode                                                 [done]
