--- a/changelog
+++ b/changelog
@@ -34,3 +34,6 @@
 	improve setup routine
 	fix return error bug
 	[1/31/2010]
+0.9.4	fix bsd mode, because bsd mode not work at 0.9.3
+	change cancel -> exit in xsr
+	[10/02/2010]
