Edited wiki page PageName through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,9 +1,9 @@
-#Sisrestore or SR is a pack of shell script to provide a deepfreeze like function in linux desktop.
+Sisrestore or SR is a pack of shell script to provide a deepfreeze like function in linux desktop.
 
 = Introduction =
 
 Sisrestore or SR is a pack of shell script to provide a deepfreeze like function in linux desktop. It developed specially for Kompudini but it can run on any linux or unix system compatible with small modification or not.
-**Any impact to your system is your bussines**
+*Any impact to your system is your bussines*
 
 
 = Details =
