--- a/trunk/changelog
+++ b/trunk/changelog
@@ -53,3 +53,4 @@
 	fix another filenaming confuseness
 	fix sr.desktop category from other to system tool in gnome menu
 	[15/06/2010]	
+0.9.7	add root check at guided.sh
