--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -120,7 +120,7 @@ if you dont know what you do!_
 == 4. Compatibility ==
 
 I've test Sisretore with some linux distro, it can run with :
-1. Ubuntu from 10.04 - 12.04.
-2. slackware from 12 above.
-3. fedora 12 and above ( need xmessage ).
-4. blankon from nanggar and above.
+#. Ubuntu from 10.04 - 12.04.
+#. slackware from 12 above.
+#. fedora 12 and above ( need xmessage ).
+#. blankon from nanggar and above.
